--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-share-buttons": "^1.1.1"
